Rename Kotlin folders and start on initial NBA CSVs

--- a/sports-iq/src/app/app.component.html
+++ b/sports-iq/src/app/app.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar>
+  <img src="assets/logo.png" />
   <span>Sports IQ</span>
   <button mat-button>Data</button>
   <button mat-button>Data2</button>
