--- a/sports-iq/src/app/app.component.html
+++ b/sports-iq/src/app/app.component.html
@@ -1,7 +1,11 @@
 <mat-toolbar>
-  <img height="50" src="logo.png" />
-  <button mat-button [matMenuTriggerFor]="statsMenu">Stats</button>
-  <mat-menu #statsMenu="matMenu">
+	<img height="50" src="logo.png" [routerLink]="['home']" />
+	<button mat-button [routerLink]="['nfl', 'stats']">NFL</button>
+	<button mat-button [routerLink]="['nba', 'stats']">NBA</button>
+	<button mat-button [routerLink]="['mlb', 'stats']">MLB</button>
+	<button mat-button [routerLink]="['lol', 'stats']">League of Legends</button>
+	<!-- <button mat-button [matMenuTriggerFor]="statsMenu">Stats</button> -->
+	<!-- <mat-menu #statsMenu="matMenu">
     <button mat-menu-item [routerLink]="['stats', 'nba']">NBA</button>
     <button mat-menu-item [routerLink]="['ranking', 'nfl']">NFL</button>
     <button mat-menu-item [routerLink]="['ranking', 'mlb']">MLB</button>
@@ -15,8 +19,8 @@
     <button mat-menu-item [routerLink]="['ranking', 'nfl']">NFL</button>
     <button mat-menu-item [routerLink]="['ranking', 'mlb']">MLB</button>
   </mat-menu>
-  <button mat-button>AI</button>
+  <button mat-button>AI</button> -->
 </mat-toolbar>
-<div class="router-outlet">
-  <router-outlet></router-outlet>
+<div id="app">
+	<router-outlet></router-outlet>
 </div>
