--- a/sports-iq/src/app/pages/stats/stats.component.scss
+++ b/sports-iq/src/app/pages/stats/stats.component.scss
@@ -1,6 +1,25 @@
 :host {
-  .header {
-    .title {
-    }
-  }
+	#stats {
+		min-height: calc(100vh - 64px);
+
+		mat-spinner {
+			margin: 32px auto;
+		}
+
+		.header {
+			align-items: center;
+			display: flex;
+			height: 64px;
+			gap: 8px;
+			margin: 0 8px 0 50px;
+
+			.spacer {
+				flex: 1;
+			}
+
+			h2 {
+				margin: 0;
+			}
+		}
+	}
 }
