--- a/sports-iq/src/app/components/sidenav/sidenav.component.html
+++ b/sports-iq/src/app/components/sidenav/sidenav.component.html
@@ -11,7 +11,7 @@
 				<div matListItemTitle>Rankings</div>
 			</mat-list-item>
 			<mat-list-item (click)="navigate(['fantasy'])">
-				<mat-icon matListItemIcon>shield</mat-icon>
+				<mat-icon matListItemIcon>security</mat-icon>
 				<div matListItemTitle>Fantasy</div>
 			</mat-list-item>
 			<mat-list-item (click)="navigate(['ai'])">
