--- a/sports-iq/src/app/pages/stats/nba-player-table/nba-player-table.component.html
+++ b/sports-iq/src/app/pages/stats/nba-player-table/nba-player-table.component.html
@@ -1,95 +1,97 @@
 @if (statsResource.isLoading()) {
 	<mat-spinner class="center-spinner"></mat-spinner>
 } @else {
-	<table mat-table [dataSource]="dataSource() ?? []" recycleRows class="mat-elevation-z8">
-		<ng-container matColumnDef="Name">
-			<th mat-header-cell *matHeaderCellDef>Name</th>
-			<td mat-cell *matCellDef="let element">{{ element.player }}</td>
-		</ng-container>
+	<si-stats-filter title="NBA Players" [columns]="displayColumns">
+		<table mat-table [dataSource]="dataSource() ?? []" recycleRows class="mat-elevation-z8">
+			<ng-container matColumnDef="Name">
+				<th mat-header-cell *matHeaderCellDef>Name</th>
+				<td mat-cell *matCellDef="let element">{{ element.player }}</td>
+			</ng-container>
 
-		<ng-container matColumnDef="Position">
-			<th mat-header-cell *matHeaderCellDef>Pos</th>
-			<td mat-cell *matCellDef="let element">{{ element.position }}</td>
-		</ng-container>
+			<ng-container matColumnDef="Position">
+				<th mat-header-cell *matHeaderCellDef>Pos</th>
+				<td mat-cell *matCellDef="let element">{{ element.position }}</td>
+			</ng-container>
 
-		<ng-container matColumnDef="Age">
-			<th mat-header-cell *matHeaderCellDef>Age</th>
-			<td mat-cell *matCellDef="let element">{{ element.age }}</td>
-		</ng-container>
+			<ng-container matColumnDef="Age">
+				<th mat-header-cell *matHeaderCellDef>Age</th>
+				<td mat-cell *matCellDef="let element">{{ element.age }}</td>
+			</ng-container>
 
-		<ng-container matColumnDef="Team">
-			<th mat-header-cell *matHeaderCellDef>Team</th>
-			<td mat-cell *matCellDef="let element">{{ element.team }}</td>
-		</ng-container>
+			<ng-container matColumnDef="Team">
+				<th mat-header-cell *matHeaderCellDef>Team</th>
+				<td mat-cell *matCellDef="let element">{{ element.team }}</td>
+			</ng-container>
 
-		<ng-container matColumnDef="Games">
-			<th mat-header-cell *matHeaderCellDef>Games</th>
-			<td mat-cell *matCellDef="let element">{{ element.game }} ({{ element.gameStarts }})</td>
-		</ng-container>
+			<ng-container matColumnDef="Games">
+				<th mat-header-cell *matHeaderCellDef>Games</th>
+				<td mat-cell *matCellDef="let element">{{ element.game }} ({{ element.gameStarts }})</td>
+			</ng-container>
 
-		<ng-container matColumnDef="Points">
-			<th mat-header-cell *matHeaderCellDef>Points</th>
-			<td mat-cell *matCellDef="let element">{{ element.pointsPerGame | number: "1.1-1" }}</td>
-		</ng-container>
+			<ng-container matColumnDef="Points">
+				<th mat-header-cell *matHeaderCellDef>Points</th>
+				<td mat-cell *matCellDef="let element">{{ element.pointsPerGame | number: "1.1-1" }}</td>
+			</ng-container>
 
-		<ng-container matColumnDef="FG%">
-			<th mat-header-cell *matHeaderCellDef>FG%</th>
-			<td mat-cell *matCellDef="let element">{{ element.fieldGoalPercent | percent: "1.1-1" }}</td>
-		</ng-container>
+			<ng-container matColumnDef="FG%">
+				<th mat-header-cell *matHeaderCellDef>FG%</th>
+				<td mat-cell *matCellDef="let element">{{ element.fieldGoalPercent | percent: "1.1-1" }}</td>
+			</ng-container>
 
-		<ng-container matColumnDef="3P%">
-			<th mat-header-cell *matHeaderCellDef>3P%</th>
-			<td mat-cell *matCellDef="let element">{{ element.threePointPercent | percent: "1.1-1" }}</td>
-		</ng-container>
+			<ng-container matColumnDef="3P%">
+				<th mat-header-cell *matHeaderCellDef>3P%</th>
+				<td mat-cell *matCellDef="let element">{{ element.threePointPercent | percent: "1.1-1" }}</td>
+			</ng-container>
 
-		<ng-container matColumnDef="2P%">
-			<th mat-header-cell *matHeaderCellDef>2P%</th>
-			<td mat-cell *matCellDef="let element">{{ element.twoPointPercent | percent: "1.1-1" }}</td>
-		</ng-container>
+			<ng-container matColumnDef="2P%">
+				<th mat-header-cell *matHeaderCellDef>2P%</th>
+				<td mat-cell *matCellDef="let element">{{ element.twoPointPercent | percent: "1.1-1" }}</td>
+			</ng-container>
 
-		<ng-container matColumnDef="eFG%">
-			<th mat-header-cell *matHeaderCellDef>eFG%</th>
-			<td mat-cell *matCellDef="let element">{{ element.efieldGoalPercent | percent: "1.1-1" }}</td>
-		</ng-container>
+			<ng-container matColumnDef="eFG%">
+				<th mat-header-cell *matHeaderCellDef>eFG%</th>
+				<td mat-cell *matCellDef="let element">{{ element.efieldGoalPercent | percent: "1.1-1" }}</td>
+			</ng-container>
 
-		<ng-container matColumnDef="FT%">
-			<th mat-header-cell *matHeaderCellDef>FT%</th>
-			<td mat-cell *matCellDef="let element">{{ element.freeThrow / element.freeThrowAttempts | percent: "1.1-1" }}</td>
-		</ng-container>
+			<ng-container matColumnDef="FT%">
+				<th mat-header-cell *matHeaderCellDef>FT%</th>
+				<td mat-cell *matCellDef="let element">{{ element.freeThrow / element.freeThrowAttempts | percent: "1.1-1" }}</td>
+			</ng-container>
 
-		<ng-container matColumnDef="Rebounds">
-			<th mat-header-cell *matHeaderCellDef>Rebounds</th>
-			<td mat-cell *matCellDef="let element">{{ element.totalRebounds | number: "1.1-1" }}</td>
-		</ng-container>
+			<ng-container matColumnDef="Rebounds">
+				<th mat-header-cell *matHeaderCellDef>Rebounds</th>
+				<td mat-cell *matCellDef="let element">{{ element.totalRebounds | number: "1.1-1" }}</td>
+			</ng-container>
 
-		<ng-container matColumnDef="Assists">
-			<th mat-header-cell *matHeaderCellDef>Assists</th>
-			<td mat-cell *matCellDef="let element">{{ element.assists | number: "1.1-1" }}</td>
-		</ng-container>
+			<ng-container matColumnDef="Assists">
+				<th mat-header-cell *matHeaderCellDef>Assists</th>
+				<td mat-cell *matCellDef="let element">{{ element.assists | number: "1.1-1" }}</td>
+			</ng-container>
 
-		<ng-container matColumnDef="Steals">
-			<th mat-header-cell *matHeaderCellDef>Steals</th>
-			<td mat-cell *matCellDef="let element">{{ element.steals | number: "1.1-1" }}</td>
-		</ng-container>
+			<ng-container matColumnDef="Steals">
+				<th mat-header-cell *matHeaderCellDef>Steals</th>
+				<td mat-cell *matCellDef="let element">{{ element.steals | number: "1.1-1" }}</td>
+			</ng-container>
 
-		<ng-container matColumnDef="Blocks">
-			<th mat-header-cell *matHeaderCellDef>Blocks</th>
-			<td mat-cell *matCellDef="let element">{{ element.blocks | number: "1.1-1" }}</td>
-		</ng-container>
+			<ng-container matColumnDef="Blocks">
+				<th mat-header-cell *matHeaderCellDef>Blocks</th>
+				<td mat-cell *matCellDef="let element">{{ element.blocks | number: "1.1-1" }}</td>
+			</ng-container>
 
-		<ng-container matColumnDef="Turnovers">
-			<th mat-header-cell *matHeaderCellDef>Turnovers</th>
-			<td mat-cell *matCellDef="let element">{{ element.turnover | number: "1.1-1" }}</td>
-		</ng-container>
+			<ng-container matColumnDef="Turnovers">
+				<th mat-header-cell *matHeaderCellDef>Turnovers</th>
+				<td mat-cell *matCellDef="let element">{{ element.turnover | number: "1.1-1" }}</td>
+			</ng-container>
 
-		<ng-container matColumnDef="PF">
-			<th mat-header-cell *matHeaderCellDef>PF</th>
-			<td mat-cell *matCellDef="let element">{{ element.personalFouls | number: "1.1-1" }}</td>
-		</ng-container>
+			<ng-container matColumnDef="PF">
+				<th mat-header-cell *matHeaderCellDef>PF</th>
+				<td mat-cell *matCellDef="let element">{{ element.personalFouls | number: "1.1-1" }}</td>
+			</ng-container>
 
-		<tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
-		<tr mat-row *matRowDef="let row; columns: displayColumns"></tr>
-	</table>
+			<tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
+			<tr mat-row *matRowDef="let row; columns: displayColumns"></tr>
+		</table>
+	</si-stats-filter>
 }
 
-<mat-paginator [pageSizeOptions]="[25, 50, 75]" showFirstLastButtons aria-label="Select page of NBA data"></mat-paginator>
+<mat-paginator [pageSizeOptions]="[15, 25, 50]" showFirstLastButtons aria-label="Select page of NBA data"></mat-paginator>
