--- a/sports-iq/src/app/pages/stats/stats-filter/stats-filter.component.html
+++ b/sports-iq/src/app/pages/stats/stats-filter/stats-filter.component.html
@@ -1,13 +1,29 @@
 <mat-drawer-container [hasBackdrop]="true">
 	<mat-drawer mode="over" position="end" #drawer>
-		<h2>{{ title() }} Filters</h2>
+		<h2>
+			{{ title() }} Filters
+			<mat-icon
+				matTooltip="Adjust filters 'weights' to rank players / teams as you see fit. Increasing column's number weights that stat more important
+			while lowerly will decrease it's importance in the overall rankings"
+			>
+				info
+			</mat-icon>
+		</h2>
 
 		<div class="filters">
-			@for (column of columns(); track $index) {
+			@for (column of columns() | keyvalue; track $index) {
 				<div class="filter">
-					<span>{{ column }}</span>
+					<span>{{ column.key }}</span>
 					<mat-form-field appearance="outline">
-						<input matInput type="text" />
+						<input
+							matInput
+							type="number"
+							step="0.1"
+							min="0"
+							max="10"
+							[value]="column.value"
+							(input)="setFilter(column.key, $event)"
+						/>
 					</mat-form-field>
 				</div>
 			}
