Rework to allow multi years selected

--- a/sports-iq/src/app/pages/stats/nba-player-table/nba-player-table.component.scss
+++ b/sports-iq/src/app/pages/stats/nba-player-table/nba-player-table.component.scss
@@ -1,4 +1,11 @@
 :host {
+	.additional-filters {
+		display: flex;
+		gap: 8px;
+		justify-content: right;
+		margin-bottom: 16px;
+	}
+
 	.center-spinner {
 		margin: 32px auto;
 	}
