--- a/sports-iq/src/app/pages/stats/nba-player-table/nba-player-table.component.html
+++ b/sports-iq/src/app/pages/stats/nba-player-table/nba-player-table.component.html
@@ -1,11 +1,21 @@
 @if (statsResource.isLoading()) {
 	<mat-spinner class="center-spinner"></mat-spinner>
 } @else {
+	<div class="additional-filters">
+		<mat-form-field appearance="outline">
+			<mat-label>Position</mat-label>
+			<mat-select [value]="position()" (selectionChange)="position.set($event.value)" multiple>
+				@for (position of positions; track $index) {
+					<mat-option [value]="position">{{ position }}</mat-option>
+				}
+			</mat-select>
+		</mat-form-field>
+	</div>
 	<si-stats-filter title="NBA Players" [columns]="filterColumns()" (updateFilter)="updateFilterColumn($event)">
 		<table mat-table [dataSource]="dataSource() ?? []" recycleRows class="mat-elevation-z8">
 			<ng-container matColumnDef="Name">
 				<th mat-header-cell *matHeaderCellDef>Name</th>
-				<td mat-cell *matCellDef="let element">{{ element.player }}</td>
+				<td mat-cell *matCellDef="let element">{{ element.player }} {{ years().length === 1 ? "" : +"(" + element.year + ")" }}</td>
 			</ng-container>
 
 			<ng-container matColumnDef="Position">
@@ -25,7 +35,7 @@
 
 			<ng-container matColumnDef="Games">
 				<th mat-header-cell *matHeaderCellDef>Games</th>
-				<td mat-cell *matCellDef="let element">{{ element.game }} ({{ element.gameStarts }})</td>
+				<td mat-cell *matCellDef="let element">{{ element.games }} ({{ element.gameStarts }})</td>
 			</ng-container>
 
 			<ng-container matColumnDef="Points">
@@ -42,12 +52,16 @@
 
 			<ng-container matColumnDef="3P%">
 				<th mat-header-cell *matHeaderCellDef>3P%</th>
-				<td mat-cell *matCellDef="let element">{{ element.threePointPercent | percent: "1.1-1" }}</td>
+				<td mat-cell *matCellDef="let element" [matTooltip]="element.threePoints + '/' + element.threePointAttempts">
+					{{ element.threePointPercent | percent: "1.1-1" }}
+				</td>
 			</ng-container>
 
 			<ng-container matColumnDef="2P%">
 				<th mat-header-cell *matHeaderCellDef>2P%</th>
-				<td mat-cell *matCellDef="let element">{{ element.twoPointPercent | percent: "1.1-1" }}</td>
+				<td mat-cell *matCellDef="let element" [matTooltip]="element.twoPoints + '/' + element.twoPointAttempts">
+					{{ element.twoPointPercent | percent: "1.1-1" }}
+				</td>
 			</ng-container>
 
 			<ng-container matColumnDef="eFG%">
@@ -57,12 +71,21 @@
 
 			<ng-container matColumnDef="FT%">
 				<th mat-header-cell *matHeaderCellDef>FT%</th>
-				<td mat-cell *matCellDef="let element">{{ element.freeThrow / element.freeThrowAttempts | percent: "1.1-1" }}</td>
+				<td mat-cell *matCellDef="let element" [matTooltip]="element.freeThrows + '/' + element.freeThrowAttempts">
+					{{ element.freeThrows / element.freeThrowAttempts | percent: "1.1-1" }}
+				</td>
 			</ng-container>
 
 			<ng-container matColumnDef="Rebounds">
 				<th mat-header-cell *matHeaderCellDef>Rebounds</th>
-				<td mat-cell *matCellDef="let element">{{ element.totalRebounds | number: "1.1-1" }}</td>
+				<td
+					mat-cell
+					*matCellDef="let element"
+					[matTooltip]="'OREB:' + element.offensiveRebounds + '\n DREB:' + element.defensiveRebounds"
+					matTooltipClass="multiline-tooltip"
+				>
+					{{ element.totalRebounds | number: "1.1-1" }}
+				</td>
 			</ng-container>
 
 			<ng-container matColumnDef="Assists">
