--- a/sports-iq/src/styles.scss
+++ b/sports-iq/src/styles.scss
@@ -28,3 +28,11 @@ body {
 .multiline-tooltip {
 	white-space: pre-line;
 }
+
+th.border-left {
+	border-left: 1px solid #85948f;
+}
+
+th.border-right {
+	border-right: 1px solid #85948f;
+}
