--- a/sports-iq/src/app/pages/stats/nba-player-table/nba-player-table.component.html
+++ b/sports-iq/src/app/pages/stats/nba-player-table/nba-player-table.component.html
@@ -1,25 +1,20 @@
 @if (statsResource.isLoading()) {
 	<mat-spinner class="center-spinner"></mat-spinner>
 } @else {
-	<div class="additional-filters">
-		<mat-form-field appearance="outline">
-			<mat-label>Position</mat-label>
-			<mat-select [value]="position()" (selectionChange)="position.set($event.value)" multiple>
-				@for (position of positions; track $index) {
-					<mat-option [value]="position">{{ position }}</mat-option>
-				}
-			</mat-select>
-		</mat-form-field>
-	</div>
-	<si-stats-filter title="NBA Players" [columns]="filterColumns()" (updateFilter)="updateFilterColumn($event)">
-		<table mat-table [dataSource]="dataSource() ?? []" recycleRows class="mat-elevation-z8">
+	<si-stats-filter title="NBA Players" [columns]="columnWeights()" (updateFilter)="updateFilterColumn($event)">
+		<table mat-table [dataSource]="dataSource() ?? []" recycleRows>
+			<ng-container matColumnDef="Rank">
+				<th mat-header-cell *matHeaderCellDef></th>
+				<td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
+			</ng-container>
+
 			<ng-container matColumnDef="Name">
 				<th mat-header-cell *matHeaderCellDef>Name</th>
-				<td mat-cell *matCellDef="let element">{{ element.player }} {{ years().length === 1 ? "" : +"(" + element.year + ")" }}</td>
+				<td mat-cell *matCellDef="let element">{{ element.player }} {{ years().length === 1 ? "" : "(" + element.year + ")" }}</td>
 			</ng-container>
 
 			<ng-container matColumnDef="Position">
-				<th mat-header-cell *matHeaderCellDef>Pos</th>
+				<th mat-header-cell *matHeaderCellDef matTooltip="Position">Pos</th>
 				<td mat-cell *matCellDef="let element">{{ element.position }}</td>
 			</ng-container>
 
@@ -34,7 +29,7 @@
 			</ng-container>
 
 			<ng-container matColumnDef="Games">
-				<th mat-header-cell *matHeaderCellDef>Games</th>
+				<th mat-header-cell *matHeaderCellDef matTooltip="Games (Starts)">Games</th>
 				<td mat-cell *matCellDef="let element">{{ element.games }} ({{ element.gameStarts }})</td>
 			</ng-container>
 
@@ -72,12 +67,12 @@
 			<ng-container matColumnDef="FT%">
 				<th mat-header-cell *matHeaderCellDef>FT%</th>
 				<td mat-cell *matCellDef="let element" [matTooltip]="element.freeThrows + '/' + element.freeThrowAttempts">
-					{{ element.freeThrows / element.freeThrowAttempts | percent: "1.1-1" }}
+					{{ element.freeThrowPercent | percent: "1.1-1" }}
 				</td>
 			</ng-container>
 
 			<ng-container matColumnDef="Rebounds">
-				<th mat-header-cell *matHeaderCellDef>Rebounds</th>
+				<th mat-header-cell *matHeaderCellDef matTooltip="Rebounds">REB</th>
 				<td
 					mat-cell
 					*matCellDef="let element"
@@ -104,12 +99,12 @@
 			</ng-container>
 
 			<ng-container matColumnDef="Turnovers">
-				<th mat-header-cell *matHeaderCellDef>Turnovers</th>
+				<th mat-header-cell *matHeaderCellDef matTooltip="Turnovers">TO</th>
 				<td mat-cell *matCellDef="let element">{{ element.turnover | number: "1.1-1" }}</td>
 			</ng-container>
 
 			<ng-container matColumnDef="PF">
-				<th mat-header-cell *matHeaderCellDef>PF</th>
+				<th mat-header-cell *matHeaderCellDef matTooltip="Personal Fouls">PF</th>
 				<td mat-cell *matCellDef="let element">{{ element.personalFouls | number: "1.1-1" }}</td>
 			</ng-container>
 
