--- a/sports-iq/src/app/pages/stats/stats-filter/stats-filter.component.html
+++ b/sports-iq/src/app/pages/stats/stats-filter/stats-filter.component.html
@@ -1,14 +1,14 @@
 <mat-drawer-container [hasBackdrop]="true">
 	<mat-drawer mode="over" position="end" #drawer>
-		<h2>
-			{{ title() }} Weights
+		<div class="header">
+			<h2>{{ title() }} Weights</h2>
 			<mat-icon
 				matTooltip="Adjust filters 'weights' to rank players / teams as you see fit. Increasing column's number weights that stat more important
-			while lowerly will decrease it's importance in the overall rankings"
+	while lowerly will decrease it's importance in the overall rankings"
 			>
 				info
 			</mat-icon>
-		</h2>
+		</div>
 
 		<div class="filters">
 			@for (column of columns() | keyvalue; track $index) {
@@ -18,9 +18,10 @@
 						<input
 							matInput
 							type="number"
-							step="0.1"
+							step="1"
 							min="0"
-							max="10"
+							max="100"
+							pattern="\d"
 							[value]="column.value"
 							(input)="setFilter(column.key, $event)"
 						/>
