--- a/sports-iq/src/app/pages/stats/stats-filter/stats-filter.component.scss
+++ b/sports-iq/src/app/pages/stats/stats-filter/stats-filter.component.scss
@@ -11,7 +11,8 @@
 
 	.filter-header {
 		display: flex;
-		justify-content: space-between;
+		justify-content: right;
+		gap: 8px;
 		margin-bottom: 8px;
 	}
 
