--- a/sports-iq/src/app/pages/stats/nba-team-table/nba-team-table.component.html
+++ b/sports-iq/src/app/pages/stats/nba-team-table/nba-team-table.component.html
@@ -15,12 +15,12 @@
 
 			<ng-container matColumnDef="Record">
 				<th mat-header-cell *matHeaderCellDef>Record</th>
-				<td mat-cell *matCellDef="let element">{{ element.wins }} / {{ element.loses }}</td>
+				<td mat-cell *matCellDef="let element">{{ element.wins }}/{{ element.loses }}</td>
 			</ng-container>
 
 			<ng-container matColumnDef="Expected Record">
 				<th mat-header-cell *matHeaderCellDef>Expected Record</th>
-				<td mat-cell *matCellDef="let element">{{ element.expectedWins }} / {{ element.expectedLoses }}</td>
+				<td mat-cell *matCellDef="let element">{{ element.expectedWins }}/{{ element.expectedLoses }}</td>
 			</ng-container>
 
 			<ng-container matColumnDef="Margin of Victory">
@@ -60,17 +60,17 @@
 				<td mat-cell *matCellDef="let element">{{ element.pace }}</td>
 			</ng-container>
 
-			<ng-container matColumnDef="Free Throw Rate">
+			<ng-container matColumnDef="FT Rate">
 				<th mat-header-cell *matHeaderCellDef>FT Rate</th>
 				<td mat-cell *matCellDef="let element">{{ element.freeThrowRate | percent: "1.1-1" }}</td>
 			</ng-container>
 
-			<ng-container matColumnDef="Three point Rate">
+			<ng-container matColumnDef="3P Rate">
 				<th mat-header-cell *matHeaderCellDef>3P Rate</th>
 				<td mat-cell *matCellDef="let element">{{ element.threePointRate | percent: "1.1-1" }}</td>
 			</ng-container>
 
-			<ng-container matColumnDef="True Shooting %">
+			<ng-container matColumnDef="TS%">
 				<th mat-header-cell *matHeaderCellDef>TS%</th>
 				<td mat-cell *matCellDef="let element">{{ element.trueShootingPercent | percent: "1.1-1" }}</td>
 			</ng-container>
