--- a/sports-iq/src/app/pages/stats/stats-filter/stats-filter.component.html
+++ b/sports-iq/src/app/pages/stats/stats-filter/stats-filter.component.html
@@ -19,20 +19,32 @@
 							matInput
 							type="number"
 							step="1"
-							min="0"
+							min="1"
 							max="100"
 							pattern="\d"
-							[value]="column.value"
-							(input)="setFilter(column.key, $event)"
+							[value]="column.value.weight"
+							(input)="setFilterWeight(column.key, $event)"
 						/>
 					</mat-form-field>
+					<mat-slide-toggle [checked]="column.value.isAsc" (change)="setFilterAsc(column.key, $event)">Is Asc</mat-slide-toggle>
 				</div>
 			}
 		</div>
 	</mat-drawer>
 	<mat-drawer-content>
 		<div class="filter-header">
-			<div></div>
+			<div>
+				<mat-chip-set>
+					@for (column of columns() | keyvalue; track column.key) {
+						@if (column.value.weight > 1) {
+							<mat-chip>
+								<mat-icon matChipAvatar>keyboard_arrow_up</mat-icon>
+								{{ column.key }}: {{ column.value.weight }}
+							</mat-chip>
+						}
+					}
+				</mat-chip-set>
+			</div>
 			<button mat-stroked-button (click)="drawer.toggle()">Weighting</button>
 		</div>
 		<ng-content></ng-content>
