--- a/sports-iq/src/app/pages/stats/stats-filter/stats-filter.component.scss
+++ b/sports-iq/src/app/pages/stats/stats-filter/stats-filter.component.scss
@@ -1,5 +1,6 @@
 :host {
 	.header {
+		align-items: center;
 		display: flex;
 		justify-content: space-between;
 	}
@@ -20,12 +21,20 @@
 		display: flex;
 		flex-direction: column;
 		gap: 4px;
-		margin: 0 16px;
+		margin: 4px 16px;
 
 		.filter {
 			align-items: center;
 			display: flex;
-			justify-content: space-between;
+			gap: 4px;
+
+			.spacer {
+				flex: 1;
+			}
+
+			mat-form-field {
+				width: 100px;
+			}
 		}
 	}
 }
