--- a/sports-iq/src/app/pages/stats/stats-filter/stats-filter.component.html
+++ b/sports-iq/src/app/pages/stats/stats-filter/stats-filter.component.html
@@ -40,7 +40,7 @@
 				<div class="filters">
 					@for (column of columns() | keyvalue; track $index) {
 						<div class="filter">
-							<span>{{ column.key }}</span>
+							<span class="key">{{ column.key }}</span>
 							<span class="spacer"></span>
 							<mat-button-toggle-group
 								[hideSingleSelectionIndicator]="true"
@@ -68,27 +68,29 @@
 		</mat-tab-group>
 	</mat-drawer>
 	<mat-drawer-content>
-		<div class="filter-header">
-			<div>
-				<mat-chip-set>
-					@for (column of columns() | keyvalue; track column.key) {
-						@if (column.value.weight > 1) {
-							<mat-chip>
-								<mat-icon matChipAvatar>sort</mat-icon>
-								{{ column.key }}: {{ column.value.weight }}
-							</mat-chip>
+		<div class="filter-content">
+			<div class="filter-header">
+				<div>
+					<mat-chip-set>
+						@for (column of columns() | keyvalue; track column.key) {
+							@if (column.value.weight > 1) {
+								<mat-chip>
+									<mat-icon matChipAvatar>sort</mat-icon>
+									{{ column.key }}: {{ column.value.weight }}
+								</mat-chip>
+							}
+							@if (column.value.filterValue != null) {
+								<mat-chip>
+									<mat-icon matChipAvatar>filter_alt</mat-icon>
+									{{ column.key }}: {{ column.value.filterValue }}
+								</mat-chip>
+							}
 						}
-						@if (column.value.filterValue != null) {
-							<mat-chip>
-								<mat-icon matChipAvatar>filter_alt</mat-icon>
-								{{ column.key }}: {{ column.value.filterValue }}
-							</mat-chip>
-						}
-					}
-				</mat-chip-set>
+					</mat-chip-set>
+				</div>
+				<button mat-stroked-button (click)="drawer.toggle()">Filters</button>
 			</div>
-			<button mat-stroked-button (click)="drawer.toggle()">Filters</button>
+			<ng-content></ng-content>
 		</div>
-		<ng-content></ng-content>
 	</mat-drawer-content>
 </mat-drawer-container>
