--- a/sports-iq/src/app/pages/stats/stats.component.html
+++ b/sports-iq/src/app/pages/stats/stats.component.html
@@ -16,8 +16,9 @@
 			<mat-form-field appearance="outline">
 				<mat-label>Type</mat-label>
 				<mat-select [value]="type()" (selectionChange)="type.set($event.value)">
-					<mat-option value="teams">Teams</mat-option>
-					<mat-option value="players">Players</mat-option>
+					@for (option of typeOptions(); track $index) {
+						<mat-option [value]="option">{{ option | titlecase }}</mat-option>
+					}
 				</mat-select>
 			</mat-form-field>
 			<mat-form-field appearance="outline">
@@ -37,6 +38,9 @@
 				}
 				@case (1) {
 					<si-nba-team-table [years]="year()"></si-nba-team-table>
+				}
+				@case (4) {
+					<si-mlb-hitter-table [years]="year()"></si-mlb-hitter-table>
 				}
 			}
 		</div>
