--- a/sports-iq/src/app/pages/stats/stats-filter/stats-filter.component.html
+++ b/sports-iq/src/app/pages/stats/stats-filter/stats-filter.component.html
@@ -82,7 +82,8 @@
 							@if (column.value.filterValue != null) {
 								<mat-chip>
 									<mat-icon matChipAvatar>filter_alt</mat-icon>
-									{{ column.key }}: {{ column.value.filterValue }}
+									{{ column.key }} {{ column.value.direction === "greaterThan" ? "&gt;" : "&lt;" }}
+									{{ column.value.filterValue }}
 								</mat-chip>
 							}
 						}
