--- a/sports-iq/src/app/pages/stats/mlb-hitter-table/mlb-hitter-table.component.html
+++ b/sports-iq/src/app/pages/stats/mlb-hitter-table/mlb-hitter-table.component.html
@@ -10,7 +10,12 @@
 
 			<ng-container matColumnDef="Name">
 				<th mat-header-cell *matHeaderCellDef>Name</th>
-				<td mat-cell *matCellDef="let element">{{ element.player }}</td>
+				<td mat-cell *matCellDef="let element">
+					{{ element.player }}
+					@if (years().length > 1) {
+						({{ element.year }})
+					}
+				</td>
 			</ng-container>
 
 			<ng-container matColumnDef="Age">
@@ -19,17 +24,17 @@
 			</ng-container>
 
 			<ng-container matColumnDef="League">
-				<th mat-header-cell *matHeaderCellDef>League</th>
+				<th mat-header-cell *matHeaderCellDef matTooltip="League">L</th>
 				<td mat-cell *matCellDef="let element">{{ element.league }}</td>
 			</ng-container>
 
 			<ng-container matColumnDef="Games">
-				<th mat-header-cell *matHeaderCellDef>G</th>
+				<th mat-header-cell *matHeaderCellDef matTooltip="Games">G</th>
 				<td mat-cell *matCellDef="let element">{{ element.games }}</td>
 			</ng-container>
 
-			<ng-container matColumnDef="Plate Apperances">
-				<th mat-header-cell *matHeaderCellDef>PA</th>
+			<ng-container matColumnDef="PA">
+				<th mat-header-cell *matHeaderCellDef matTooltip="Plate Apperances">PA</th>
 				<td mat-cell *matCellDef="let element">{{ element.plateAppearances }}</td>
 			</ng-container>
 
@@ -74,12 +79,12 @@
 			</ng-container>
 
 			<ng-container matColumnDef="Steals">
-				<th mat-header-cell *matHeaderCellDef>SB (CS)</th>
+				<th mat-header-cell *matHeaderCellDef matTooltip="Stolen Bases (Caught Stealing)">SB (CS)</th>
 				<td mat-cell *matCellDef="let element">{{ element.stolenBases }} ({{ element.caught }})</td>
 			</ng-container>
 
 			<ng-container matColumnDef="Base on Balls">
-				<th mat-header-cell *matHeaderCellDef>BB</th>
+				<th mat-header-cell *matHeaderCellDef matTooltip="Base on Balls">BB</th>
 				<td mat-cell *matCellDef="let element">{{ element.baseOnBalls }}</td>
 			</ng-container>
 
@@ -113,8 +118,10 @@
 				<td mat-cell *matCellDef="let element">{{ element.roba }}</td>
 			</ng-container>
 
-			<tr mat-header-row *matHeaderRowDef="displayColumns" class="border-row"></tr>
-			<tr mat-row *matRowDef="let row; columns: displayColumns"></tr>
+			<tr mat-header-row *matHeaderRowDef="displayColumns()" class="border-row"></tr>
+			<tr mat-row *matRowDef="let row; columns: displayColumns()"></tr>
 		</table>
 	</si-stats-filter>
+
+	<mat-paginator [pageSizeOptions]="[25, 50, 100]" showFirstLastButtons aria-label="Select page of MLB data"></mat-paginator>
 }
