--- a/sports-iq/src/app/pages/stats/nba-player-table/nba-player-table.component.html
+++ b/sports-iq/src/app/pages/stats/nba-player-table/nba-player-table.component.html
@@ -108,8 +108,8 @@
 				<td mat-cell *matCellDef="let element">{{ element.personalFouls | number: "1.1-1" }}</td>
 			</ng-container>
 
-			<tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
-			<tr mat-row *matRowDef="let row; columns: displayColumns"></tr>
+			<tr mat-header-row *matHeaderRowDef="displayColumns()"></tr>
+			<tr mat-row *matRowDef="let row; columns: displayColumns()"></tr>
 		</table>
 	</si-stats-filter>
 }
