Add MLB Pitcher table

--- a/sports-iq/src/app/pages/stats/stats.component.html
+++ b/sports-iq/src/app/pages/stats/stats.component.html
@@ -42,6 +42,9 @@
 				@case (4) {
 					<si-mlb-hitter-table [years]="year()"></si-mlb-hitter-table>
 				}
+				@case (5) {
+					<si-mlb-pitcher-table [years]="year()"></si-mlb-pitcher-table>
+				}
 			}
 		</div>
 	</div>
